# huck

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Foo.hk  README.md  expr.hk  ideas.md  short.hk  stream.lua  test.hk  todo.todo
.github/workflows/: add-to-project.yml
docs/: lazyinstrict.ps
examples/: bar.hk  basic.hk  foo.hk  lua_library.lua  short.hk  short_impl.hk  test.hk  uses_lua.hk
huck/: Prelude.hk
huck/Std/: List.hk  Map.hk  Table.hk
huck/Std/List/: Std.List.Impl.lua
huck/Std/Map/: Std.Map.Impl.lua
huck/Std/Table/: Std.Table.Impl.lua
scripts/: coverage.sh  empty.sh  install_hooks  pre-commit
src/: ast.rs  compile.rs  constraint.rs  context.rs  error.rs  generatable_module.rs  ir.rs  lex.rs  lib.rs  log.rs  main.rs  module.rs  name.rs  new_codegen.rs  parse.rs  precedence.rs  resolve.rs  scope.rs  test_common.rs  typecheck.rs  types.rs  utils.rs
src/codegen/: error.rs  mod.rs  test.rs
src/codegen/lua/: mod.rs  test.rs
src/context/: constraint.rs  mod.rs
src/dependencies/: error.rs  mod.rs  test.rs
src/file/: error.rs  mod.rs  test.rs
src/name/: error.rs  mod.rs  resolve.rs  test.rs
src/parse/: error.rs  mod.rs  post.rs  precedence.rs  test.rs  tests.rs
src/resolve/: error.rs  mod.rs
src/typecheck/: arity.rs  constraint.rs  error.rs  mod.rs  substitution.rs  test.rs
src/types/: constraint.rs  error.rs  mod.rs  substitution.rs  test.rs
tests/: examples.rs
