[package]
name = "huck"
version = "0.1.1"
authors = ["Jesse Adamson Paroz <hucklanguage@gmail.com>"]
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7"
log_crate = { package = "log", version = "0.4" }
env_logger = "0.9"
thiserror = "1.0"
